余额兑换积分,上级按比例加速

--- a/mubei/TurnOut/change_lt.html
+++ b/mubei/TurnOut/change_lt.html
@@ -108,7 +108,8 @@
                 style="background:#46adfc;border-color:#46adfc;font-size: 14px;" id="turn_out"><span
                 class="language-quedingduihuan"></span></button>
         <button class="mui-btn mui-btn-warning mui-btn-block" style="color: #000000;font-size: 14px;"
-                onclick="window.location.href='change_recode_lt.html'; "><span class="language-jifenjilu"></span>
+                onclick="window.location.href='change_recode_lt.html'; ">
+            <span class="language-jifenjilu"></span>
         </button>
     </div>
 
